fix(style): white space on the bottom on mobile

--- a/app/app.css
+++ b/app/app.css
@@ -102,7 +102,7 @@ layer(base);
 		@apply scroll-smooth border-border;
 	}
 	body {
-		@apply relative w-full min-h-screen bg-background text-foreground antialiased transition-colors duration-300 overscroll-y-none;
+		@apply relative w-full min-h-svh bg-background text-foreground antialiased transition-colors duration-300 overscroll-y-none;
 	}
 
 	/* From Apple.com home page h1 */
